--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p id="unmatched" class="notify">❌ Pin Didn't Match, Please try again</p>
                 <p id="matched" class="notify">✅ Pin Matched... Secret door is opening for you</p>
                 <p id="empty-pin" class="notify"><span>&#8505;</span> Please click on Generate Pin first</p>
-                <p id="empty-input-display" class="notify"><span>&#8505;</span> Please enter the generated pin</p>
+                <p id="input-error" class="notify"><span>&#8505;</span> Please enter the 4 digit pin</p>
                 <p id="help-text" class="notify"><span>&#8505;</span> Please reload the page or try again later</p>
             </div>
 
