--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p id="matched" class="notify">✅ Pin Matched... Secret door is opening for you</p>
                 <p id="empty-pin" class="notify"><span>&#8505;</span> Please click on Generate Pin first</p>
                 <p id="input-error" class="notify"><span>&#8505;</span> Please enter the 4 digit pin</p>
-                <p id="help-text" class="notify"><span>&#8505;</span> Please reload the page or try again later</p>
+                <p id="help-text" class="notify"><span>&#8505;</span> Please reload the page for try again</p>
             </div>
 
         </div>
